# xenomods

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  base_rules  bfsw.json  exported.txt  nso.mk
.github/workflows/: ci.yml
cmake/: FpicExternal.cmake  MakeNso.cmake  NintendoSwitch.cmake
docs/: bdat_overriding.md  config.md  controls.md  menu.md  warps.md
include/: curl.h  cxa.h  endianess.h  main.hpp  types.h
include/bf2mods/: DebugWrappers.hpp  HidInput.hpp  Logger.hpp  NnFile.hpp  UpdatableModule.hpp  Utils.hpp  bf2logger.hpp  debug_wrappers.hpp  prettyprinter.hpp  shared_state.hpp  utils.hpp
include/bf2mods/apps/: FrameworkLauncher.hpp
include/bf2mods/engine/apps/: FrameworkLauncher.hpp
include/bf2mods/engine/bdat/: Bdat.hpp
include/bf2mods/engine/event/: Manager.hpp
include/bf2mods/engine/fw/: Debug.hpp  Framework.hpp  UpdateInfo.hpp  camera.hpp  (+2 more)
include/bf2mods/fw/: camera.hpp  debug.hpp  document.hpp  input_manager.hpp  update_info.hpp
include/bf2mods/game/: behavior_pc.hpp  mapjump.hpp
include/bf2mods/gf/: bgm.hpp  misc.h  player_controller.hpp
include/bf2mods/ml/: camera.hpp
include/bf2mods/mm/: fixstr.hpp  math_types.hpp
include/bf2mods/tl/: title.hpp
include/nn/: diag.h  err.h  fs.h  hid.h  hid.hpp  nifm.h  oe.h  os.hpp  settings.h  socket.h  ssl.h  time.h  util.h  vi.h  wrapper.hpp
include/skylaunch/hookng/: FunctionPointers.hpp  Hooks.hpp
include/skylaunch/inlinehook/: And64InlineHook.hpp  controlledpages.hpp
include/skylaunch/logger/: Logger.hpp  TcpLogger.hpp
include/skylaunch/nx/: result.h
include/skylaunch/plugin/: PluginManager.hpp
include/skylaunch/utils/: cpputils.hpp  ipc.hpp  utils.h
include/skyline/inlinehook/: And64InlineHook.hpp
include/skyline/logger/: Logger.hpp
include/xenomods/: DebugWrappers.hpp  HidInput.hpp  ImGuiExtensions.hpp  Logger.hpp  NnFile.hpp  State.hpp  Utils.hpp  Version.hpp
include/xenomods/menu/: Menu.hpp  MenuLog.hpp  Option.hpp  Section.hpp  Textual.hpp  Themes.hpp
linkerscripts/: exported.txt  switch.specs.in
npdm/: bf2.json  bf3.json  bfsw.json  ira.json
scripts/: gittag.cmake  gittag.py  makePackage.py  patchNpdm.py  send_over_ftp.py
skyline/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bf2.json  bfsw.json  nso.mk
skyline/attic-build/: Makefile  nso.mk  switch_rules
skyline/cmake/: MakeNso.cmake  NintendoSwitch.cmake
skyline/include/: ModuleObject.hpp  macros.h  std.h  stdalign.h  types.h
skyline/include/nn/: account.h  audio.h  crypto.h  friends.h  fs.h  image.h  init.h  mem.h  nn.h  oe.h  os.h  prepo.h  ro.h  svc.h
skyline/include/nvn/: types.h
skyline/linkerscripts/: switch.specs
skyline/scripts/: gittag.cmake  send_over_ftp.py
skyline/source/: CMakeLists.txt  crti.c  main.cpp
skyline/source/bf2mods/: bdat_randomizer.cpp  bdat_randomizer.hpp  bf2logger.cpp  bf2logger.h  debug_stuff.cpp  debug_stuff.hpp  math_types.cpp  menu_viewer.hpp  party_selector.cpp  party_selector.hpp  player_movement.cpp  player_movement.hpp  plugin.cpp  plugin.hpp  plugin_main.cpp  plugin_main.hpp  test.hpp
src/: CMakeLists.txt  crt0.s  main.cpp  module.cpp
src/bf2mods/: HidInput.cpp  Logger.cpp  NnFile.cpp  State.cpp  State.hpp  UpdatableModule.cpp  Version.cpp  Version.hpp  bdat_randomizer.cpp  bdat_randomizer.hpp  bf2logger.cpp  bf2logger.hpp  camera_tools.cpp  camera_tools.hpp  debug_stuff.cpp  debug_stuff.hpp  file_detours.cpp  file_detours.hpp  main.cpp  main.hpp  menu_viewer.cpp  menu_viewer.hpp  party_selector.hpp  player_movement.cpp  player_movement.hpp  plugin.cpp  plugin.hpp  plugin_main.cpp  plugin_main.hpp  state.cpp  state.hpp  test.hpp
src/bf2mods/engine/mm/: MathTypes.cpp  math_types.cpp
src/bf2mods/mm/: math_types.cpp
src/bf2mods/modules/: BdatOverride.cpp  BdatOverride.hpp  BdatRandomizer.cpp  BdatRandomizer.hpp  CameraTools.cpp  CameraTools.hpp  DebugStuff.cpp  DebugStuff.hpp  EventDebugUtils.cpp  EventDebugUtils.hpp  FileDetours.cpp  FileDetours.hpp  MenuViewer.cpp  MenuViewer.hpp  PlayerMovement.cpp  PlayerMovement.hpp  UpdatableModule.cpp  UpdatableModule.hpp
src/bf2mods/stuff/utils/: debug_util.cpp  util.cpp
src/nvn/: pfnc.cpp
src/skylaunch/entry/: crt0.s  crti.c  cxa.c  main.cpp  module.cpp
src/skylaunch/hookng/: Hooks.cpp
src/skylaunch/inlinehook/: And64InlineHook.cpp  controlledpages.cpp
src/skylaunch/logger/: Logger.cpp  TcpLogger.cpp
src/skylaunch/nx/: internal.h
src/skylaunch/nx/kernel/: condvar.c  detect.c  jit.c  mutex.c  shmem.c  thread.c  virtmem.c
src/skylaunch/nx/runtime/: env.c  hosversion.c  init.c
src/skylaunch/nx/sf/: sessionmgr.c
src/skylaunch/plugin/: PluginManager.cpp
src/skylaunch/utils/: cpputils.cpp  ipc.cpp  utils.c
src/skyline/efl/: service.cpp
src/xenomods/: FunctionalHooks.cpp  FunctionalHooks.hpp  HidInput.cpp  ImGuiExtensions.cpp  Logger.cpp  NnFile.cpp  State.cpp  State.hpp  Version.cpp  Version.hpp  main.cpp  main.hpp
src/xenomods/menu/: Menu.cpp  MenuLog.cpp  Option.cpp  Section.cpp
src/xenomods/modules/: AppletRedirect.cpp  AppletRedirect.hpp  BattleCheats.cpp  BattleCheats.hpp  BdatOverride.cpp  BdatOverride.hpp  BdatRandomizer.cpp  BdatRandomizer.hpp  CameraTools.cpp  CameraTools.hpp  DEDebugTests.cpp  DEDebugTests.hpp  DebugStuff.cpp  DebugStuff.hpp  EventDebugUtils.cpp  EventDebugUtils.hpp  FileDetours.cpp  FileDetours.hpp  FrameratePatch.cpp  FrameratePatch.hpp  MenuViewer.cpp  MenuViewer.hpp  PartyEditor.cpp  PartyEditor.hpp  PlayerMovement.cpp  PlayerMovement.hpp  RenderingControls.cpp  RenderingControls.hpp  ResourceManager.cpp  ResourceManager.hpp  UpdatableModule.cpp  UpdatableModule.hpp
src/xenomods/modules/bf2/: BattleCheats.cpp  BattleCheats.hpp  CompatabilityFix.cpp  CompatabilityFix.hpp  EventDebugUtils.cpp  EventDebugUtils.hpp
src/xenomods/modules/bfsw/: AppletRedirect.cpp  AppletRedirect.hpp  PartyEditor.cpp  PartyEditor.hpp  ResourceManager.cpp  ResourceManager.hpp
src/xenomods/modules/helpers/: ImGuiExtensions.hpp
src/xenomods/stuff/utils/: debug_util.cpp  util.cpp
(+137 files in other folders)
